# Music-Streaming

./: .gitignore  README.md  compose.yaml
.github/workflows/: aws-deploy.yml  digital-ocean.yml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  diesel.toml
backend/migrations/2024-12-20-125530_create_users/: up.sql
backend/migrations/2024-12-20-211646_create_session/: down.sql
backend/migrations/2024-12-26-174125_create_songs/: up.sql
backend/migrations/2024-12-28-174125_create_session/: up.sql
backend/src/: auth.rs  lib.rs  main.rs  models.rs  samples.rs  schema.rs  spaces.rs
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: root.tsx  types.ts
frontend/app/components/: MainPageContent.tsx  NavigationBar.tsx  SongPlayer.tsx  SongPlayerSkeleton.tsx
frontend/app/functions/: auth.server.ts  songs.server.ts
frontend/app/routes/: _index.tsx  admin.tsx  login.tsx  signup.tsx
frontend/app/routes/_index/: MainPageContent.tsx  MainPageContentSkeleton.tsx  SongPlayer.tsx  route.tsx
frontend/app/routes/admin/: route.tsx
frontend/app/routes/new-song/: route.tsx
