[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
uuid = { version = "1.11.0", features=["serde", "v4"] }
password-hash = "0.5.0"
argon2 = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.39"
actix-cors = "0.7.0"
