[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.4"
futures = "0.3"
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono"] }
dotenvy = "0.15.7"
uuid = { version = "1.11.0", features=["serde", "v4"] }
password-hash = "0.5.0"
argon2 = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.39"
actix-cors = "0.7.0"
hound = "3.5.1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.66.0"
tokio = { version = "1", features = ["full"] }
flate2 = "1.0.35"
image = "0.25.5"